--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -31,7 +31,7 @@
   }
 
   @media screen and (max-width: 640px) {
-    padding: 6rem 1rem 2rem;
+    padding: 2rem 1rem 2rem;
   }
 }
 
